--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,49 @@
-*{
+/* GENERAL */
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  width: 60%;
+  margin: auto;
+}
+
+/* HEADER */
+header{
+  background-color: #404EED;
+  padding: 30px 0;
+}
+
+header .container{
+  justify-content: space-between;
+  flex-wrap: wrap;
+  background-color: #e78152;
+}
+
+nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+}
+
+nav ul li {
+  margin: 0 20px;
+}
+
+nav ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+}
+
+.login a{
+  color: black;
+  text-decoration: none;
 }
